Fixed manifest display for LinkConnections in node groups